[package]
name = "streaming-test"
version = "0.1.0"
authors = ["Brennon Loveless <brennon.loveless@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oauth2 = "2.0"
hyper = "0.13"
tokio = { version = "0.2", features = ["full"] }