[package]
name = "tweet-stream-rs"
version = "0.1.0"
authors = ["Brennon Loveless <brennon.loveless@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13"
reqwest = "0.10"
tokio = { version = "0.2", features = ["full"] }
dotenv = "0.15"
anyhow = "1.0.26"
rand = "0.7"
