[package]
name = "tweet-stream"
version = "0.1.0"
authors = ["Brennon Loveless <brennon.loveless@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["blocking"] }
tokio = { version = "0.2", features = ["full"] }
dotenv = "0.15"
anyhow = "1.0.26"
rand = "0.7"
hmac-sha1 = "0.1"
base64 = "0.11"
url = "0.2"
httparse = "1.3.4"
